--- a/src/browser/svelte/chrome/index.html
+++ b/src/browser/svelte/chrome/index.html
@@ -58,6 +58,42 @@
       align-items: center;
       padding-left: 22px;
     }
+    .blocker {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      z-index: 9;
+      top: 0;
+      left: 0;
+    }
+    .dialog {
+      z-index: 10;
+      background: var(--dialog-background);
+      border: 1px solid var(--trivial-color);
+      display: block;
+      position: absolute;
+      border-radius: 8px;
+      max-width: 380px;
+      padding: 12px;
+      cursor: default;
+      top: calc(100% + 10px);
+    }
+
+    input.input {
+      display: block;
+      background: transparent;
+      border: 1px solid var(--trivial-color);
+      width: -webkit-fill-available;
+      padding: 8px;
+      border-radius: 6px;
+      color: var(--accent-text);
+      transition: .1s;
+    }
+    input.input:focus-visible {
+      outline: none;
+      box-shadow: 0px 0px 0px 2px var(--accent-color);
+      border-color: var(--accent-color);
+    }
   </style>
 </head>
 <body>
