--- a/src/browser/webui/newtab.html
+++ b/src/browser/webui/newtab.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>New Tab</title>
   <link rel="stylesheet" href="nereid://css/global.css">
+  <link rel="stylesheet" href="nereid://css/theme.css">
   <style>
     body {
       margin: 0;
@@ -13,6 +14,11 @@
       background-image: url(nereid://.bg_image);
       background-position: center;
       background-attachment: fixed;
+      font-family: system-ui;
+    }
+    * {
+      user-select: none;
+      -webkit-user-drag: none;
     }
   </style>
 </head>
