ui: updated net-err-template

--- a/src/browser/webui/net-err-template.html
+++ b/src/browser/webui/net-err-template.html
@@ -41,6 +41,7 @@
     .errordata {
       max-width: 750px;
       max-height: 100%;
+      padding: 40px;
     }
 
     h2 {
@@ -58,7 +59,7 @@
       margin-top: 70px;
     }
 
-    a.btn {
+    .btn {
       color: inherit;
       text-decoration: none;
       padding: 8px;
@@ -70,11 +71,11 @@
       cursor: pointer;
     }
 
-    a.btn:hover {
+    .btn:hover {
       background: #5bacff;
     }
 
-    a.btn:active {
+    .btn:active {
       background: #003d7c;
     }
   </style>
@@ -91,10 +92,11 @@
         <path
           d="M12 14c-2.33 0-4.32 1.45-5.12 3.5h1.67c.69-1.19 1.97-2 3.45-2s2.75.81 3.45 2h1.67c-.8-2.05-2.79-3.5-5.12-3.5zm-.01-12C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z" />
       </svg>
-      <span id="info">An unknown error occured while loading the web page.</span>
+      <span id="info">This is an error template</span>
     </h2>
-    <p id="detail">We have no idea what it means. <a class="btn">This does nothing.</a> </p>
-    <i id="code">ERR_FAILED</i>
+    <p id="detail">You would see this if you encounter an error while loading a web page<br><br>
+    <button class="btn">This does nothing.</button> </p>
+    <i id="code">CODE</i>
   </div>
 </body>
 
