feat: adblocker using cliqz

--- a/src/browser/webui/about.html
+++ b/src/browser/webui/about.html
@@ -13,6 +13,7 @@
       color: var(--fds-text-primary);
       margin: 0;
       font-family: system-ui;
+      color-scheme: dark;
     }
 
     .separator {
