feat: cool animations on popups in chrome

--- a/src/browser/svelte/chrome/index.html
+++ b/src/browser/svelte/chrome/index.html
@@ -74,9 +74,13 @@
       position: absolute;
       border-radius: 8px;
       max-width: 380px;
-      padding: 12px;
       cursor: default;
       top: calc(100% + 10px);
+      overflow: auto;
+      max-height: 13.5cm;
+    }
+    .dialog-content {
+      padding: 12px;
     }
 
     input.input {
