ui: downloads open state

--- a/src/browser/svelte/chrome/index.html
+++ b/src/browser/svelte/chrome/index.html
@@ -46,7 +46,7 @@
     .tool:hover {
       background: var(--tool-hover);
     }
-    .tool:active {
+    .tool:active, .tool.open {
       background: var(--tool-active);
     }
     .dropdown-box {
