--- a/src/browser/svelte/chrome/index.html
+++ b/src/browser/svelte/chrome/index.html
@@ -36,12 +36,12 @@
       color: inherit;
     }
     .tool {
-      padding: 4px;
+      padding: 0.25rem;
       display: flex;
       align-items: center;
       justify-content: center;
       margin-inline: 1px;
-      border-radius: 4px;
+      border-radius: 0.25rem;
     }
     .tool:hover {
       background: var(--tool-hover);
@@ -50,13 +50,13 @@
       background: var(--tool-active);
     }
     .dropdown-box {
-      padding-block: 8px;
-      padding-inline: 12px;
+      padding-block: 0.5rem;
+      padding-inline: 0.75rem;
       background: var(--active-background);
       color: var(--accent-text);
       display: flex;
       align-items: center;
-      padding-left: 22px;
+      padding-left: 1.375rem;
     }
     .blocker {
       position: fixed;
@@ -72,31 +72,31 @@
       border: 1px solid var(--trivial-color);
       display: block;
       position: absolute;
-      border-radius: 8px;
-      max-width: 380px;
+      border-radius: 0.5rem;
+      max-width: 21.4rem;
       cursor: default;
-      top: calc(100% + 10px);
+      top: calc(100% + 0.625rem);
       overflow: auto;
-      max-height: 13.5cm;
+      max-height: 31.88rem;
     }
     .dialog-content {
-      padding: 12px;
+      padding: 0.68rem;
     }
 
     .dl-buttons {
-      margin-left: 16px;
+      margin-left: 1rem;
       display: flex;
     }
     .mini-btn {
-      padding: 14px;
-      width: 15px;
-      height: 15px;
-      overflow: hidden;
-      display: inline-flex;
-      border-radius: 4px;
-      align-items: center;
-      justify-content: center;
-      transition: 0.1s;
+    padding: 0.875rem;
+    width: 0.875rem;
+    height: 0.875rem;
+    overflow: hidden;
+    display: inline-flex;
+    border-radius: 0.25rem;
+    align-items: center;
+    justify-content: center;
+    transition: 0.1s;
     }
     .mini-btn:hover {
       background: var(--button-hover);
@@ -124,14 +124,15 @@
       background: transparent;
       border: 1px solid var(--trivial-color);
       width: -webkit-fill-available;
-      padding: 8px;
-      border-radius: 6px;
+      padding: 0.5rem;
+      border-radius: 0.375rem;
       color: var(--accent-text);
       transition: .1s;
+      font-family: inherit;
     }
     input.input:focus-visible {
       outline: none;
-      box-shadow: 0px 0px 0px 2px var(--accent-color);
+      box-shadow: 0px 0px 0px 1px var(--accent-color);
       border-color: var(--accent-color);
     }
   </style>
