ui: added a color scheme + other minor ui changes

--- a/src/browser/svelte/chrome/index.html
+++ b/src/browser/svelte/chrome/index.html
@@ -9,7 +9,7 @@
   <style>
     body {
       background: transparent;
-      color: var(--accent-text);
+      color: var(--text);
       margin: 0;
       display: flex;
       flex-direction: column;
@@ -18,42 +18,39 @@
       overflow: hidden;
     }
     
-    span.protocol {
-      color: var(--trivial-text);
+    span.protocol, span.page, span.port {
+      color: var(--t-white-9);
     }
     span.host {
-      color: var(--accent-text);
-    }
-    span.port {
-      color: #c1dfff;
-    }
-    span.page {
-      color: var(--trivial-text);
+      color: var(--text);
     }
 
     *::selection {
-      background: var(--accent-color);
+      background: var(--accent-5);
       color: inherit;
     }
     .tool {
-      padding: 0.25rem;
+      padding: 0.3rem;
+      padding-inline: 0.5rem;
       display: flex;
       align-items: center;
       justify-content: center;
       margin-inline: 1px;
       border-radius: 0.25rem;
+      transition: 0.15s;
     }
     .tool:hover {
-      background: var(--tool-hover);
+      background: var(--t-white-2);
     }
-    .tool:active, .tool.open {
-      background: var(--tool-active);
+    .tool:hover:active, .tool.open {
+      background: var(--t-white-4);
+      transition: 0s;
     }
     .dropdown-box {
       padding-block: 0.5rem;
       padding-inline: 0.75rem;
       background: var(--active-background);
-      color: var(--accent-text);
+      color: var(--text);
       display: flex;
       align-items: center;
       padding-left: 1.375rem;
@@ -68,8 +65,8 @@
     }
     .dialog {
       z-index: 10;
-      background: var(--dialog-background);
-      border: 1px solid var(--trivial-color);
+      background: var(--dark-2);
+      border: 1px solid var(--t-white-3);
       display: block;
       position: absolute;
       border-radius: 0.5rem;
@@ -83,27 +80,72 @@
       padding: 0.68rem;
     }
 
+    input.input {
+      display: block;
+      background: transparent;
+      border: 1px solid var(--gray-3);
+      width: -webkit-fill-available;
+      padding: 0.5rem;
+      border-radius: 0.375rem;
+      color: var(--text);
+      transition: .1s;
+      font-family: inherit;
+    }
+    input.input:focus-visible {
+      outline: none;
+      box-shadow: 0px 0px 0px 1px var(--accent-5);
+      border-color: var(--accent-5);
+    }
+
+    @media (prefers-color-scheme: light) {
+      span.protocol, span.page, span.port {
+        color: var(--t-black-9);
+      }
+      *::selection {
+        background: var(--accent-8);
+      }
+      .tool:hover {
+        background: var(--t-black-2);
+      }
+      .tool:hover:active, .tool.open {
+        background: var(--t-black-4);
+      }
+      .dialog {
+        background: var(--light-9);
+        border: 1px solid var(--t-black-3);
+      }
+      input.input {
+        border: 1px solid var(--gray-8);
+        color: var(--text);
+      }
+      input.input:focus-visible {
+        box-shadow: 0px 0px 0px 1px var(--accent-5);
+        border-color: var(--accent-5);
+      }
+    }
+
+    /* Code used both by Downloads.svelte and Downloads/Item.svelte */
     .dl-buttons {
       margin-left: 1rem;
       display: flex;
     }
     .mini-btn {
-    padding: 0.875rem;
-    width: 0.875rem;
-    height: 0.875rem;
-    overflow: hidden;
-    display: inline-flex;
-    border-radius: 0.25rem;
-    align-items: center;
-    justify-content: center;
-    transition: 0.1s;
+      padding: 0.875rem;
+      width: 0.875rem;
+      height: 0.875rem;
+      overflow: hidden;
+      display: inline-flex;
+      border-radius: 0.25rem;
+      align-items: center;
+      justify-content: center;
+      transition: 0.15s;
     }
     .mini-btn:hover {
-      background: var(--button-hover);
-      transition: 0s;
+      background: var(--t-white-3);
     }
-    .mini-btn:active {
-      background: var(--button-active);
+    .mini-btn:hover:active {
+      background: var(--t-white-5);
+      transition: 0s;
     }
     .mini-btn > img {
       width: inherit;
@@ -112,28 +154,45 @@
     .url {
       white-space: nowrap;
       text-overflow: ellipsis;
-      color: var(--trivial-text);
+      color: var(--gray-8);
     }
     .more-info {
       font-size: small;
-      color: var(--trivial-text);
+      color: var(--gray-6);
+    }
+    
+    .dl-wrapper {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .dl-wrapper:not(:last-child) {
+      border-bottom: var(--gray-3) 1px solid;
+    }
+    .download {
+      padding: 0.25rem;
+      overflow: hidden;
+    }
+    .download b {
+      white-space: nowrap;
     }
 
-    input.input {
-      display: block;
-      background: transparent;
-      border: 1px solid var(--trivial-color);
-      width: -webkit-fill-available;
-      padding: 0.5rem;
-      border-radius: 0.375rem;
-      color: var(--accent-text);
-      transition: .1s;
-      font-family: inherit;
-    }
-    input.input:focus-visible {
-      outline: none;
-      box-shadow: 0px 0px 0px 1px var(--accent-color);
-      border-color: var(--accent-color);
+    @media (prefers-color-scheme: light) {
+      .mini-btn:hover {
+        background: var(--t-white-3);
+      }
+      .mini-btn:hover:active {
+        background: var(--t-white-5);
+      }
+      .url {
+        color: var(--gray-8);
+      }
+      .more-info {
+        color: var(--gray-6);
+      }
+      .dl-wrapper:not(:last-child) {
+        border-bottom: var(--gray-8) 1px solid;
+      }
     }
   </style>
 </head>
