--- a/src/browser/svelte/cookieviewer/index.html
+++ b/src/browser/svelte/cookieviewer/index.html
@@ -9,8 +9,14 @@
   <style>
     body {
       overflow: hidden;
-      background: var(--base-background);
-      color: var(--accent-text);
+      background: var(--dark-2);
+      color: var(--text);
+    }
+
+    @media (prefers-color-scheme: light) {
+      body {
+        background: var(--light-9);
+      }
     }
   </style>
 </head>
