--- a/src/browser/svelte/certificate/index.html
+++ b/src/browser/svelte/certificate/index.html
@@ -8,14 +8,20 @@
   <link rel="stylesheet" href="//lib/theme.css">
   <style>
     body {
-      background: var(--base-background);
-      color: var(--accent-text);
+      background: var(--dark-2);
+      color: var(--text);
       font-family: system-ui;
       font-size: small;
       user-select: none;
     }
     ::selection {
-      background: var(--accent-hover);
+      background: var(--accent-7);
+    }
+
+    @media (prefers-color-scheme: light) {
+      body {
+        background: var(--light-9);
+      }
     }
   </style>
 </head>
