refactor: moved the 90% chrome scale into the css out of config

--- a/src/browser/svelte/chrome/index.html
+++ b/src/browser/svelte/chrome/index.html
@@ -7,6 +7,10 @@
   <title>Nereid</title>
   <link rel="stylesheet" href="//lib/theme.css">
   <style>
+    :root {
+      font-size: 0.9rem; /* Most values are in REM and this adjusts the general scale */
+    }
+
     body {
       background: transparent;
       color: var(--text);
