--- a/src/browser/svelte/chrome/index.html
+++ b/src/browser/svelte/chrome/index.html
@@ -100,7 +100,7 @@
     }
     input.input:focus-visible {
       outline: none;
-      box-shadow: 0px 0px 0px 1px var(--accent-5);
+      box-shadow: 0 0 0 1px var(--accent-5);
       border-color: var(--accent-5);
     }
 
@@ -129,7 +129,7 @@
         color: var(--text);
       }
       input.input:focus-visible {
-        box-shadow: 0px 0px 0px 1px var(--accent-5);
+        box-shadow: 0 0 0 1px var(--accent-5);
         border-color: var(--accent-5);
       }
     }
