--- a/src/browser/svelte/chrome/index.html
+++ b/src/browser/svelte/chrome/index.html
@@ -44,7 +44,7 @@
       justify-content: center;
       margin-inline: 1px;
       border-radius: 0.15rem;
-      transition: 0.25s;
+      transition: cubic-bezier(0.57, 0.2, 1, 1) 0.2s;
     }
     .tool:hover {
       background: var(--t-white-2);
