qol+fix: proper `window.open()` behaviour + browser-wide tab events + single-tab window (when opening a popup) (see tabs.ts:689)
note: The new implementation of `window.open()` uses undocumented non-standard Electron APIs.

--- a/src/browser/svelte/chrome/singletab.html
+++ b/src/browser/svelte/chrome/singletab.html
@@ -12,6 +12,10 @@
   <script type="module">
     import Main from './Main.svelte.js';
 
+    Object.defineProperty(window, 'isSingleTab', {
+      writable: false, enumerable: false, value: true
+    })
+
     const app = new Main({
       target: document.body
     })
