--- a/src/browser/webui/net-err-template.html
+++ b/src/browser/webui/net-err-template.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <style media="screen">
     body {
-      background: #181b20;
+      background: #1f2124;
       color: white;
       font-family: system-ui;
       display: flex;
